Homeworks/2D_third/output.txt
functions.cpp: In function ‘void mult_sub_vector(int, double*, double*, double, int, int)’:
functions.cpp:87:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
   87 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void apply_preconditioner_msr_matrix(int, double*, int*, double*, double*, int, int)’:
functions.cpp:98:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
   98 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void multiply_msr_matrix_vector(int, double*, int*, double*, double*, int, int)’:
functions.cpp:118:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  118 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void fill_A(int, int, double, double, int*, double*, int, int)’:
functions.cpp:285:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  285 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void fill_B(int, int, double, double, double, double, double*, double (*)(double, double), int, int, int, double)’:
functions.cpp:376:9: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  376 |         ReduceSum(p);
      |         ^~~~~~~~~
      |         ReduceSumDet
functions.cpp: In function ‘void* thread_func(void*)’:
functions.cpp:540:13: error: ‘ReduceSum’ was not declared in this scope; did you mean ‘ReduceSumDet’?
  540 |             ReduceSum(p);
      |             ^~~~~~~~~
      |             ReduceSumDet
make: *** [Makefile:399: functions.o] Error 1
